<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <POU Name="MotorControlProgram" Id="{00379d9c-0616-4665-8241-0c1fd684cd8f}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MotorControlProgram
VAR
	rtCM_Start: R_TRIG;
	rtVM_Start: R_TRIG;
	rsCM	:	RS;
	rsVM	:	RS;
	
	targSpeed	:	INT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(*
VAR_INPUT
	Run			:	BOOL;
	Direction	:	BOOL;
	ConstSpeed	:	BOOL;
	Velocity	:	INT;
END_VAR
VAR_OUTPUT
	isRunning	:	BOOL;
	iActualVel	:	INT;
END_VAR
*)



(* On / Off  Motor  *)

//***
rtCM_Start(CLK := GUI.bCMotor_Start);
rsCM(SET := rtCM_Start.Q);

Hardware.Motor2_Start := rsCM.Q1 ;


(*  TAMU  Motor  *)
//***
//rsVM(SET := GUI.bVMotor_Start);
//Hardware.Motor1_Start := rsVM.Q1 ;
Hardware.Motor1_Start :=  GUI.bVMotor_Start;
GUI.bVMotor_Running := Hardware.Motor1_Run_TAMU;
Hardware.Motor1_Constant_speed := GUI.bVMotor_ConstantSpeed;
Hardware.Motor1_Direction := GUI.bVMotor_Direction;
// Y = x0 + %% * Xrng
targSpeed := REAL_TO_INT( 32767 * (GUI.iVMotor_TargetSpeed / 100.0) );
Hardware.Motor1_speed_value := targSpeed;

GUI.iVMotor_CurrentSpeed := REAL_TO_INT( Hardware.Motor1_real_value / 32767.0 * 100.0 );





]]></ST>
    </Implementation>
    <LineIds Name="MotorControlProgram">
      <LineId Id="5" Count="0" />
      <LineId Id="7" Count="9" />
      <LineId Id="6" Count="0" />
      <LineId Id="37" Count="1" />
      <LineId Id="27" Count="0" />
      <LineId Id="26" Count="0" />
      <LineId Id="25" Count="0" />
      <LineId Id="22" Count="0" />
      <LineId Id="18" Count="0" />
      <LineId Id="23" Count="0" />
      <LineId Id="47" Count="0" />
      <LineId Id="19" Count="0" />
      <LineId Id="24" Count="0" />
      <LineId Id="28" Count="0" />
      <LineId Id="20" Count="0" />
      <LineId Id="30" Count="0" />
      <LineId Id="51" Count="0" />
      <LineId Id="53" Count="1" />
      <LineId Id="36" Count="0" />
      <LineId Id="52" Count="0" />
      <LineId Id="58" Count="0" />
      <LineId Id="56" Count="0" />
      <LineId Id="34" Count="0" />
      <LineId Id="29" Count="0" />
      <LineId Id="60" Count="0" />
      <LineId Id="59" Count="0" />
      <LineId Id="61" Count="4" />
      <LineId Id="17" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>